maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: not found: value Largeur
  for (x <- 0 to Largeur-1; y <- 0 to Hauteur-1) {
                 ^ShortestPathMaze:7: error: not found: value Hauteur
  for (x <- 0 to Largeur-1; y <- 0 to Hauteur-1) {
                                      ^ShortestPathMaze:30: error: not found: value Largeur
  while (numMarques < Largeur*Hauteur) {
                      ^ShortestPathMaze:30: error: not found: value Hauteur
  while (numMarques < Largeur*Hauteur) {
                              ^ShortestPathMaze:32: error: not found: value Largeur
    for (X <- 1 to Largeur-1;Y <- 1 to Hauteur-1) {
                   ^ShortestPathMaze:32: error: not found: value Hauteur
    for (X <- 1 to Largeur-1;Y <- 1 to Hauteur-1) {
                                       ^